--- a/SimpleMovieSearch/Views/Movie/MovieIndex.cshtml
+++ b/SimpleMovieSearch/Views/Movie/MovieIndex.cshtml
@@ -10,7 +10,7 @@
     <img class="imagePosters filmEffect" src="~/images/comedy/3357f8721939bd301abf03404eee47ce.jpg" /> @*4*@
 
 
-
+@*
     <img class="imagePosters filmEffect" src="~/images/fantasty/110ca1fb5919f4f0f341c0555aa1e39b.jpg" />
     <img class="imagePosters filmEffect" src="~/images/comedy/ae31312c244536d68ea2f3ce3b342480.jpg" />
     <img class="imagePosters filmEffect" src="~/images/fantasty/123344555555.png" />
@@ -32,7 +32,7 @@
     <img class="imagePosters filmEffect" src="~/images/horror/12322222.png" />
     <img class="imagePosters filmEffect" src="~/images/horror/24d18c6477cce3b64b726b232bb357b4.jpg" />
     <img class="imagePosters filmEffect" src="~/images/horror/694481.jpg" />
-    <img class="imagePosters filmEffect" src="~/images/horror/9.jpg" />
+    <img class="imagePosters filmEffect" src="~/images/horror/9.jpg" />*@
 
   </div>
                
