--- a/SimpleMovieSearch/Views/Movie/MovieSearch.cshtml
+++ b/SimpleMovieSearch/Views/Movie/MovieSearch.cshtml
@@ -1,10 +1,15 @@
 ﻿
+@model SimpleMovieSearch.Domain.ViewModels.Movie.MovieViewModels
+
 @{
     ViewBag.Title = "title";
     Layout = "_Layout";
 }
 <br />
-
+@Model.Name
+<br />
+@Model.Description
+<br />
 
         
 
