--- a/SimpleMovieSearch/Views/Home/Privacy.cshtml
+++ b/SimpleMovieSearch/Views/Home/Privacy.cshtml
@@ -1,37 +1,45 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
 
-<div class="container-fluid col-xl-8">
-   <p class="card-text">Хм. Вы можете указать атрибут VaryByCustom д
-    ля элемента OutputCache. Значение this передается в качестве параметра методу 
+<style>
+
+    * {
+        box-sizing: border-box;
+    }
+    body{
+        margin: 0;
+    }
+    .first {
+        min-height: 100vh;
+        position: relative;
+
+    }
+    .first__title {
+            position: relative;
+            z-index: 10;
+    }
+    .first__video {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+ </style>
+
+<section class="first">
+   <p class="card-text first__title">Хм. Вы можете указать атрибут VaryByCustom д
+    ля элемента OutputCache. Значение this передается в качестве параметра mетодду 
     GetVaryByCustomString, который вы можете реа лизовать в global.asax .
     Значение, возвращаемое этим методом, используется в к если вы возвр
     ачестве индекса в кэшированных элементах - наример, если вы возвр
     ащаете количеств неизменяемые фрагменты страницы (навигацию,рекламу, 
     фактическую запись в блоге) в качестве пользовантах - наример, если вы возвр
     ащаете количеств неизменяемые фрагменты страницы (навигацию,рекламу, 
-    фактическую запись в блоге) в качестве пользовантах - овать в global.asax .
-    Значение, возвращаемое этим методом, используется внаример, если вы возвр
-    ащаете количеств неизменяемые фрагменты страницы (навигацию,рекламу, 
-    фактическую запись в блоге) в качестве пользовантах - наример, если вы возвр
-    ащаете количеств неизменяемые фрагменты страве пользовантах - наример, если вы возвр
-    ащаете количеств неизменяемые фрагменты странить в global.asax .
-    Значение, возвращаемое этим методом, используется внавигацию,рекламу, 
-    фактическую запись в блоге) в качестве пользовантах - наример, если вы возвр
-    ащаете количеств неизменяемые фрагменты страницы (навигацию,рекламу, 
-    фактическую запись в блоге) в качестве пользовантах - наример, еовать в glo
-    Значение, возвращаемое этим методом, используется всли вы возвр
-    ащаете количеств неизменяемые фрагменты стровать в global.asax .
-    Значение, возвращаемое этим методом, используется ваницы (навигацию,рекламу, 
-    фактическую запись в блоге) в качестве пользованицы (навигацию,рекламу, 
-    фактическую запись в блоге) в качестве пользовантах - наример, если вы возвр
-    ащаете количеств неизменяемые фрагменты страницы (овать в global.asax .
-    Значение, возвращаемое этим методом, используется внавигацию,рекламу, 
-    фактическую запись в блоге) в качестве пользовантах - наример, есовать в global.asax .
-    Значение, возвращаемое этим методом, используется вли вы возвр
-    ащаете количеств неизменяемые фрагменты страницигацию,рекламу, 
+    фактическую запирагменты страницигацию,рекламу, 
     фактическую запись в блоге) в качестве пользовантах - наример, если вы возвр
     ащаете количеств неизменяемые фрагменты страницы (навигацию,рекламу, 
     фактическую запись в блоге) в качестве пользовантах - наример, если вы возвр
@@ -40,7 +48,6 @@
     фактическую запись в блоге) в качестве пользовательских элементов управления 
     и реализовать частичное кэширование страницы для каждого из этих пользовательских.
    </p>
-   
-</div>
-
+    <video src="~/video/228.MP4" muted autoplay loop class="first__video"></video>
+</section>
 
