исправил ошибку User добавил изображение к каждому фильму

--- a/SimpleMovieSearch/Views/Account/Login.cshtml
+++ b/SimpleMovieSearch/Views/Account/Login.cshtml
@@ -14,7 +14,7 @@
                     <span class="anchor"></span>
                     <div class="card card-account card-outline-secondary border border-white">
                         <div class="card-header">
-                            <h3 class="mb-0 text-center ParagraphHome">Вход в аккаунт</h3>
+                            <h3 class="mb-0 text-center paragraphHome text-black">Вход в аккаунт</h3>
                         </div>
                         <div class="card-body">
                             <form autocomplete="on" method="post" asp-controller="Account" asp-action="Login">
