--- a/SimpleMovieSearch/Views/Movie/SearchMovie.cshtml
+++ b/SimpleMovieSearch/Views/Movie/SearchMovie.cshtml
@@ -9,10 +9,8 @@
 
 <div class="container navbar bg-dark col-sm">
     <div class="row">
-        <div class="col-sm-2">
-            <img src="~/images/historical/88.jpg" 
-                 class="img-fluid rounded-start rounded" alt="@Model?.Name">
-        </div>
+        <a><img src="@Model.Image" class="imagePosters"></a>
+       
         <div class="col-sm">
             <div class="card-body">
                 <h5 class="card-title text-center">@Model?.Name</h5>
