--- a/SimpleMovieSearch/Views/Movie/GetMovie.cshtml
+++ b/SimpleMovieSearch/Views/Movie/GetMovie.cshtml
@@ -9,20 +9,15 @@
 <div class="container navbar bg-dark col-sm">
     <div class="row">
         <div class="col-sm-2">
-            <img src="~/images/historical/article-0-1A2FF3AF00000578-284_6.jpg" 
-                 class="img-fluid rounded-start rounded" alt="@Model?.Name">
+            <a><img src="@Model.Image" class="imagePosters"></a>  
+            
         </div>
-        <div class="col-sm">
+        <div class="">
             <div class="card-body">
                 <h5 class="card-title text-center">@Model?.Name</h5>
                 <p class="card-text"><b>Описание: </b>@Model?.Description</p>
                 <p class="card-text"><b>Страна: </b>@Model?.Country</p>
                 <p class="card-text"><b>Жанр: </b>@Model?.MoviesCategory</p>
-            </div>
-        </div>
-        <div>
-            <div class="col-sm">
-                <p class="card-text"><b>Описание: </b>@Model?.Description</p>
             </div>
         </div>
     </div>
