--- a/SimpleMovieSearch/Views/Movie/MovieIndex.cshtml
+++ b/SimpleMovieSearch/Views/Movie/MovieIndex.cshtml
@@ -3,41 +3,7 @@
 
 <section class="first">
     <video src="~/video/228.MP4" muted autoplay loop class="first__video"></video>
-    <div class="text-center first__title">
-
-    <img class="imagePosters filmEffect image-dark" src="~/images/fantasty/123123.png" />
-    <img class="imagePosters filmEffect image-dark" src="~/images/comedy/112140b3bd1572e45bed2491006f2fcb.jpg" />
-    <img class="imagePosters filmEffect image-dark" src="~/images/comedy/55218614.jpg" />
-    <img class="imagePosters filmEffect image-dark" src="~/images/comedy/3357f8721939bd301abf03404eee47ce.jpg" />
-
-
-
-    @*<img class="imagePosters filmEffect" src="~/images/fantasty/110ca1fb5919f4f0f341c0555aa1e39b.jpg" />
-    <img class="imagePosters filmEffect" src="~/images/comedy/ae31312c244536d68ea2f3ce3b342480.jpg" />
-    <img class="imagePosters filmEffect" src="~/images/fantasty/123344555555.png" />
-    <img class="imagePosters filmEffect" src="~/images/fantasty/3453432222222.png" />
-    <img class="imagePosters filmEffect" src="~/images/fantasty/9cb092305c8e41bd88ada64e0984086c.jpg" />
-    <img class="imagePosters filmEffect" src="~/images/fantasty/lif434.png" />
-    <img class="imagePosters filmEffect" src="~/images/fantasty/lordringsss234512wfd.png" />
-    <img class="imagePosters filmEffect" src="~/images/fantasty/sfges134325jewa1212.png" />
-    <img class="imagePosters filmEffect" src="~/images/fantasty/N3_KEpHEf1k.jpg" />
-
-    <img class="imagePosters filmEffect" src="~/images/historical/4412_big.jpg" />
-    <img class="imagePosters filmEffect" src="~/images/historical/88.jpg" />
-    <img class="imagePosters filmEffect" src="~/images/historical/article-0-1A2FF3AF00000578-284_6.jpg" />
-    <img class="imagePosters filmEffect" src="~/images/historical/d5326eff1e6f9a16d8d4f240a244f380.jpg" />
-    <img class="imagePosters filmEffect" src="~/images/historical/pompeii_ver2_xlrg-1.jpg" />
-
-    <img class="imagePosters filmEffect" src="~/images/horror/0111686.jpg" />
-    <img class="imagePosters filmEffect" src="~/images/horror/09acbe7ce8109d9bf6258b54aed23ff7.jpg" />
-    <img class="imagePosters filmEffect" src="~/images/horror/12322222.png" />
-    <img class="imagePosters filmEffect" src="~/images/horror/24d18c6477cce3b64b726b232bb357b4.jpg" />
-    <img class="imagePosters filmEffect" src="~/images/horror/694481.jpg" />
-    <img class="imagePosters filmEffect" src="~/images/horror/9.jpg" />*@
-
-  </div>
-   
-  <div class="row first__title">
+    <div class="row first__title text-center">
         @foreach (var movie in Model)
         {
             <div class="container-fluid  col-md-2 text-center">
@@ -48,8 +14,8 @@
                     </div>*@    
                     <div class="">
                         <a asp-action="GetMovie" asp-route-id="@movie.Id" class="">
-                            <img src="~/images/fantasty/sfges134325jewa1212.png" class=" imagePosters filmEffect"  alt="@movie.Name"></a>
-                                <h5 class="text-center">@movie.Name</h5>     
+                            <img src="@movie.Image" class="imagePosters filmEffect  image-dark"  alt="@movie.Name"></a>
+                            <h5 class="text-center">@movie.Name</h5>     
                         @* <a asp-controller="Basket" asp-action="Add" asp-route-id="@id" class="card-link">Добавить</a> *@
                         @if (User.IsInRole("Admin"))
                         {
