Добавил админу метод Delete

--- a/SimpleMovieSearch/Views/Movie/GetMovie.cshtml
+++ b/SimpleMovieSearch/Views/Movie/GetMovie.cshtml
@@ -9,8 +9,9 @@
 <div class="container navbar bg-dark col-sm">
     <div class="row">
         <div class="col-sm-2">
-            <a><img src="@Model.Image" class="imagePosters"></a>  
-            
+            <a><img src="@Model.Image" class="imagePosters"></a>
+            <video src="@Model.Video" poster="~/images/horror/9.jpg" controls></video>
+
         </div>
         <div class="">
             <div class="card-body">
