--- a/SimpleMovieSearch/Views/Home/Index.cshtml
+++ b/SimpleMovieSearch/Views/Home/Index.cshtml
@@ -3,4 +3,13 @@
 }
 
 
-<div class="text-lg-center">hello</div>
+
+
+<div class="container navbar bg-dark col-sm">
+    <div class="row col-sm-2">
+            <div class="card-body">
+                <video src="~/video/228.MP4" poster="~/images/horror/9.jpg" controls></video>
+            </div>
+
+    </div>
+</div>
