--- a/SimpleMovieSearch/Views/Shared/_Layout.cshtml
+++ b/SimpleMovieSearch/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="~/css/label.css"/>
     <link rel="stylesheet" href="~/css/menu.css"/>
     <link rel="stylesheet" href="~/css/paragraph.css"/>
+    <link rel="stylesheet" href="~/css/myPlayer.css"/>
 
 
 </head>
