--- a/SimpleMovieSearch/wwwroot/css/StyleSheet.css
+++ b/SimpleMovieSearch/wwwroot/css/StyleSheet.css
@@ -1,5 +1,5 @@
 ﻿.kavo {
-    background-image: url("https://images.hdqwalls.com/download/abstract-lines-digital-art-colorful-3g-2048x1152.jpg");
+    background-image: url("https://phonoteka.org/uploads/posts/2021-05/1621594751_32-phonoteka_org-p-fon-cherno-serii-gradient-32.jpg");
     background-size: cover;
     background-attachment: fixed;
 }
