--- a/SimpleMovieSearch/Views/Account/Login.cshtml
+++ b/SimpleMovieSearch/Views/Account/Login.cshtml
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="row justify-content-center">
-                <div class="col-md-10">
+                <div class="col-md-5">
                     <span class="anchor"></span>
                     <div class="card card-account card-outline-secondary border border-white">
                         <div class="card-header">
@@ -28,7 +28,7 @@
                                 </div>
                                 <div class="d-grid gap-2 d-md-block float-right">
                                     <a asp-controller="Account" asp-action="Register" class="btn btn-primary" type="button">Регистрация</a>
-                                    <button class="btn btn-success">Отправить</button>
+                                    <button class="btn btn-success text-center">Войти</button>
                                 </div>
                             </form>
                         </div>
