--- a/SimpleMovieSearch/Views/Account/Register.cshtml
+++ b/SimpleMovieSearch/Views/Account/Register.cshtml
@@ -10,11 +10,11 @@
     <div class="row">
         <div class="col-md-12">
             <div class="row justify-content-center">
-                <div class="col-md-10">
+                <div class="col-md-5">
                     <span class="anchor"></span>
-                    <div class="card card-account card-outline-secondary border border-white">
+                    <div class="card card-account card-outline-secondary border border-black">
                         <div class="card-header">
-                            <h3 class="mb-0 text-center paragraphHome text-black">Регистрация</h3>
+                            <h3 class="mb-0 text-center  text-black">Регистрация</h3>
                         </div>
                         <div class="card-body">
                             <form asp-controller="Account" asp-action="Register">
@@ -32,7 +32,7 @@
                                 <div>
                                     <h2 class="paragraphHome text-center"><a asp-controller="Account" target="_blank" asp-action="Login" style="color:deepskyblue;">Вход</a></h2>
                                 </div>
-                                <button class="btn btn-success btn-lg float-right" type="submit">Отправить</button>
+                                <button class="btn btn-info btn-lg float-right" type="submit">Зарегистрироваться</button>
                             </form>
                         </div>
                     </div>
