--- a/SimpleMovieSearch/Views/Movie/SearchMovie.cshtml
+++ b/SimpleMovieSearch/Views/Movie/SearchMovie.cshtml
@@ -14,14 +14,14 @@
         <div class="col-sm">
             <div class="card-body">
                 <h5 class="card-title text-center">@Model?.Name</h5>
-                <p class="card-text"><b>Описание: </b>@Model?.Description</p>
+                <p class="card-text"><b>Описание: </b>@Model?.Slogan</p>
                 <p class="card-text"><b>Страна: </b>@Model?.Country</p>
                 <p class="card-text"><b>Жанр: </b>@Model?.MoviesCategory</p>
             </div>
         </div> 
         <div>
             <div class="col-sm">
-                <p class="card-text"><b>Описание: </b>@Model?.Description</p>
+                <p class="card-text"><b>Описание: </b>@Model?.Slogan</p>
             </div>
         </div>
     </div>
